gw/lan/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-global-lan
  labels:
    istio.io/rev: prod
    msm3-discovery: enabled
