gw/lan/httproute-orders.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: orders-route
  namespace: rhcl-demo-lab
spec:
  hostnames:
    - orders.int.rhcl.arencloud.com
  parentRefs:
    - name: rhcl-demo-lab
      kind: Gateway
      namespace: rhcl-demo-lab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/orders
      backendRefs:
        - name: orders
          port: 8080
